add_vacancy page

--- a/authorization.html
+++ b/authorization.html
@@ -16,8 +16,8 @@
             <label class="tab" title="Вкладка 2">Регистрация</label>
 
             <form class="tab-form active">
-                <input class="input" type="email" placeholder="Введите e-mail">
-                <input class="input" type="password" placeholder="Введите пароль">
+                <input class="input" type="email" placeholder="Введите e-mail" required>
+                <input class="input" type="password" placeholder="Введите пароль" required>
                 <a href="./lk_client.html" class="button">Войти</a>
                 <ul class="socials-list">
                     <li class="socials-list__item">
@@ -40,10 +40,10 @@
             </form>
 
             <form class="tab-form">
-                <input class="input" type="email" placeholder="Введите e-mail адрес">
-                <input class="input" type="text" placeholder="Введите имя">
-                <input class="input" type="password" placeholder="Придумайте пароль">
-                <input class="input" type="password" placeholder="Повторите пароль">
+                <input class="input" type="email" placeholder="Введите e-mail адрес" required>
+                <input class="input" type="text" placeholder="Введите имя" required>
+                <input class="input" type="password" placeholder="Придумайте пароль" required>
+                <input class="input" type="password" placeholder="Повторите пароль" required>
                 <a href="#" class="button">Зарегистрироваться</a>
 
                 <div class="recover">
