--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 </li>
             </ul>
         </nav>
-        <button role="button" class="header__enter-btn">Вход</button>
+        <form action="./authorization.html">
+            <button role="button" class="header__enter-btn">Вход</button>
+        </form>
         <div class="header__user-info">
             <img src="img/default_avatar.png" alt="" class="header__user-photo">
             <p class="header__user-name">Julia</p>
