--- a/housing.html
+++ b/housing.html
@@ -328,6 +328,8 @@
                                         Кухонных принадлежностей достаточно, хороший холодильник, сантехника, планировка удобная.</p>
                                     <p class="comment-header">Недостатки</p>
                                     <p class="comment-guest-text">Отсутсвие магазинов поблизости.</p>
+                                    <p class="comment-header">Комментарий</p>
+                                    <p class="comment-guest-text">Хорошее жилье, рекомендую.</p>
                                 </div>
                                 <div class="comment-imges"></div>
                             </li>
@@ -364,6 +366,8 @@
                                     <p class="comment-guest-text">Мягкая кровать, удобная планировка.</p>
                                     <p class="comment-header">Недостатки</p>
                                     <p class="comment-guest-text">Мало техники, нерабочий телевизор.</p>
+                                    <p class="comment-header">Комментарий</p>
+                                    <p class="comment-guest-text">Нормально, жить можно.</p>
                                 </div>
                                 <div class="comment-imges"></div>
                             </li>
