--- a/my_reservations.html
+++ b/my_reservations.html
@@ -48,8 +48,8 @@
                                     Москва, Старая Басманная, 5
                                 </div>
                             </a>
-                            <div class="rewiew">
-                                <a href="./add_rewiew.html" class="rewiew-btn">Оставить отзыв</a>
+                            <div class="review">
+                                <a href="./add_review.html" class="review-btn no-review">Оставить отзыв</a>
                             </div>
                         </div>
                     </div>
@@ -79,8 +79,8 @@
                                     Москва, Старая Басманная, 5
                                 </div>
                             </a>
-                            <div class="rewiew">
-                                <a href="./add_rewiew.html" class="rewiew-btn">Оставить отзыв</a>
+                            <div class="review">
+                                <a href="./add_review.html" class="review-btn">Оставить отзыв</a>
                             </div>
                         </div>
                     </div>
@@ -110,8 +110,8 @@
                                     Сочи, Олимпийский проспект, 21
                                 </div>
                             </a>
-                            <div class="rewiew">
-                                <a href="./add_rewiew.html" class="rewiew-btn no-rewiew">Оставить отзыв</a>
+                            <div class="review">
+                                <a href="./add_review.html" class="review-btn no-review">Оставить отзыв</a>
                             </div>
                         </div>
                     </div>
@@ -141,8 +141,8 @@
                                     Калининград, ул. Горького, 33/2
                                 </div>
                             </a>
-                            <div class="rewiew">
-                                <a href="./add_rewiew.html" class="rewiew-btn">Оставить отзыв</a>
+                            <div class="review">
+                                <a href="./add_review.html" class="review-btn">Оставить отзыв</a>
                             </div>
                         </div>
                     </div>
