--- a/rentals.html
+++ b/rentals.html
@@ -81,7 +81,9 @@
                 </div>
                 <div class="rating-option option-block">
                     <p>Минимальный рейтинг:</p>
-                    <input class="option-input" type="range" min="1" max="5" step="1" value="3"> 
+                    <input class="option-input" type="range" min="1" max="5" step="1" value="3" list="range-rating" onchange="document.getElementById('rating-value').innerHTML = this.value;">
+                    <datalist id="range-rating"></datalist>
+                    <span id="rating-value">3</span>
                 </div>
             </div>
         </aside>
