--- a/my_vacancies.html
+++ b/my_vacancies.html
@@ -5,12 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/reservation.css">
+    <link rel="stylesheet" href="styles/my_vacancies.css">
     <title>DAILY rental housing</title>
 
     <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    Мои вакансии
+    <div class="page-wrapper">
+        <h1 role="heading">Мои вакансии</h1>
+
+        <div class="toggles">
+            <button id="all">Все вакансии</button>
+            <button id="approved">Одобренные</button>
+            <button id="rejected">Отклоненные</button>
+            <button id="consideration">На рассмотрении</button>
+        </div>
+
+        <div class="vacancy-card">
+            <div class="carousel-wrapper">
+                <img src="img/housing_variants/var_0_1.jpg" alt="" class="vacancy-image">
+            </div>
+            <div class="housing-description">
+                <a href="./housing.html" target="_blank">
+                    <h2 class="housing-name">Двухкомнатная квартира</h2>
+                    <div class="housing-address">
+                        <img src="img/icons/location.svg" alt="">
+                        Москва, Старая Басманная, 5
+                    </div>
+                    <div class="housing-price">
+                        <img src="img/icons/price.svg" alt="">
+                        <span class="price-card-value">8 000</span> ₽ за сутки
+                    </div>
+                </a>
+
+                <div class="housing-params">
+                    <div class="status">
+                        Статус: <span class="status-name">одобрено</span>
+                    </div>
+                    <button class="edit-btn">Редактировать</button>
+                    <button class="delete-btn">Удалить</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="vacancy-card">
+            <div class="carousel-wrapper">
+                <img src="img/housing_variants/var_1_1.jpg" alt="" class="vacancy-image">
+            </div>
+            <div class="housing-description">
+                <a href="./housing.html" target="_blank">
+                    <h2 class="housing-name">Апартамент</h2>
+                    <div class="housing-address">
+                        <img src="img/icons/location.svg" alt="">
+                        Москва, Тверская ул., 37
+                    </div>
+                    <div class="housing-price">
+                        <img src="img/icons/price.svg" alt="">
+                        <span class="price-card-value">12 000</span> ₽ за сутки
+                    </div>
+                </a>
+
+                <div class="housing-params">
+                    <div class="status">
+                        Статус: <span class="status-name">на рассмотрении</span>
+                    </div>
+                    <button class="edit-btn">Редактировать</button>
+                    <button class="delete-btn">Удалить</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="vacancy-card">
+            <div class="carousel-wrapper">
+                <img src="img/housing_variants/var_2_1.jpg" alt="" class="vacancy-image">
+            </div>
+            <div class="housing-description">
+                <a href="./housing.html" target="_blank">
+                    <h2 class="housing-name">Апартамент</h2>
+                    <div class="housing-address">
+                        <img src="img/icons/location.svg" alt="">
+                        Москва, ул. Гагарина, 18
+                    </div>
+                    <div class="housing-price">
+                        <img src="img/icons/price.svg" alt="">
+                        <span class="price-card-value">5 500</span> ₽ за сутки
+                    </div>
+                </a>
+
+                <div class="housing-params">
+                    <div class="status">
+                        Статус: <span class="status-name">отклонено</span>
+                    </div>
+                    <button class="edit-btn">Редактировать</button>
+                    <button class="delete-btn">Удалить</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
