landlord_info page

--- a/lk_client.html
+++ b/lk_client.html
@@ -106,7 +106,7 @@
         </section>
         
 
-        <section class="lk-section personal-data">
+        <section class="lk-section contacts">
             <h2 role="header">Контактные данные</h2>
 
             <p>
