--- a/lk_client.html
+++ b/lk_client.html
@@ -39,9 +39,22 @@
             </ul>
         </nav>
         <button role="button" class="header__enter-btn">Вход</button>
+        <!-- <div class="user_nav">
+            <img src="img/default_avatar.png" alt="" class="header__user-photo">
+            <div class="wrapper-dropdown" id="dd">
+                <p class="header__user-name">Анна</p>
+                <ul class="dropdown">
+                    <li><a href="/lk_client.html">Личный кабинет</a></li>
+                    <li><a href="/my_reservations.html">Мои бронирования</a></li>
+                    <li><a href="/index.html">К поиску жилья</a></li>
+                    <li><a href="/index.html">Выйти</a></li>
+                </ul>
+            </div>
+        </div> -->
+
         <div class="header__user-info">
             <img src="img/default_avatar.png" alt="" class="header__user-photo">
-            <p class="header__user-name">Julia</p>
+            <p class="header__user-name">Анна</p>
         </div>
     </header>
 
