--- a/lk_client.html
+++ b/lk_client.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/lk.css">
+    <link rel="stylesheet" href="styles/user_header.css">
     <title>DAILY rental housing</title>
 
     <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&display=swap" rel="stylesheet">
@@ -39,23 +40,21 @@
             </ul>
         </nav>
         <button role="button" class="header__enter-btn">Вход</button>
-        <!-- <div class="user_nav">
-            <img src="img/default_avatar.png" alt="" class="header__user-photo">
-            <div class="wrapper-dropdown" id="dd">
-                <p class="header__user-name">Анна</p>
-                <ul class="dropdown">
-                    <li><a href="/lk_client.html">Личный кабинет</a></li>
-                    <li><a href="/my_reservations.html">Мои бронирования</a></li>
-                    <li><a href="/index.html">К поиску жилья</a></li>
-                    <li><a href="/index.html">Выйти</a></li>
+
+        <div class="header__user-container">
+            <div class="dropdown">
+                <div class="user btndown">
+                    <img src="img/default_avatar.png" alt="" class="header__user-photo">
+                    <p class="header__user-name">Анна</p>
+                </div>
+                <ul class="wrapdown">
+                    <li><a href="./lk_client.html">Личный кабинет</a></li>
+                    <li><a href="./my_reservations.html">Мои бронирования</a></li>
+                    <li><a href="./index.html">К поиску жилья</a></li>
+                    <li><a href="./index.html">Выйти</a></li>
                 </ul>
             </div>
-        </div> -->
-
-        <div class="header__user-info">
-            <img src="img/default_avatar.png" alt="" class="header__user-photo">
-            <p class="header__user-name">Анна</p>
-        </div>
+        </div> 
     </header>
 
     <div class="page-wrapper">
